@@ -1,4 +1,7 @@
 package com.wv.wvojcodesendbox;
+
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -6,23 +9,37 @@ import java.util.List;
 
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
+import cn.hutool.core.util.StrUtil;
 import com.wv.wvojcodesendbox.model.ExecuteCodeRequest;
 import com.wv.wvojcodesendbox.model.ExecuteCodeResponse;
+import com.wv.wvojcodesendbox.model.ExecuteMessage;
+import com.wv.wvojcodesendbox.model.JudgeInfo;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.util.ResourceUtils;
 
 import java.io.File;
 import java.util.UUID;
 
+
 /**
  * Java 原生实现代码沙箱
+ *
  * @author wv
  * @version V1.0
  * @date 2023/12/11 17:20
  */
-public class JavaNactiveCodeSandBox implements CodeSandBox{
+@Slf4j
+public class JavaNactiveCodeSandBox implements CodeSandBox {
 
+    /**
+     * 全局代码存放根目录
+     */
     private static final String GLOBAL_CODE_DIR_NAME = "tempCode";
-    private static final String GLOBAL_CODE_CLASS_NAME = "Main.class";
+
+    /**
+     * 全局代码类名
+     */
+    private static final String GLOBAL_CODE_CLASS_NAME = "Main.java";
 
     public static void main(String[] args) {
         JavaNactiveCodeSandBox javaNactiveCodeSandBox = new JavaNactiveCodeSandBox();
@@ -43,19 +60,109 @@ public class JavaNactiveCodeSandBox implements CodeSandBox{
         String language = executeRequest.getLanguage();
         String code = executeRequest.getCode();
 
+        // 1.将用户提交的代码保存为文件
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
         // 判断全局代码目录是否存在，没有则新建
         if (!FileUtil.exist(globalCodePathName)) {
             FileUtil.mkdir(globalCodePathName);
         }
-
         // 把用户的代码隔离存放
         String userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
-        FileUtil.writeString(code,
-                userCodeParentPath + File.separator + GLOBAL_CODE_CLASS_NAME,
-                StandardCharsets.UTF_8);
+        String userCodePath = userCodeParentPath + File.separator + GLOBAL_CODE_CLASS_NAME;
+        File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
 
-        return null;
+        // 2.编译代码，得到 class 文件
+        String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
+        try {
+            Process compileProcess = Runtime.getRuntime().exec(compileCmd);
+            ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
+            System.out.println(executeMessage);
+        } catch (Exception e) {
+            return getErrorResponse(e);
+        }
+
+        // 3.运行代码，得到输出结果
+        List<ExecuteMessage> executeMessageList = new ArrayList<>();
+        for (String inputArgs : inputList) {
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+//            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
+            try {
+                Process runProcess = Runtime.getRuntime().exec(runCmd);
+                // 超时控制
+//                new Thread(() -> {
+//                    try {
+//                        Thread.sleep(TIME_OUT);
+//                        System.out.println("超时了，中断");
+//                        runProcess.destroy();
+//                    } catch (InterruptedException e) {
+//                        throw new RuntimeException(e);
+//                    }
+//                }).start();
+                ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
+//                ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, inputArgs);
+                System.out.println(executeMessage);
+                executeMessageList.add(executeMessage);
+            } catch (Exception e) {
+                return getErrorResponse(e);
+            }
+        }
+
+        // 4.收集整理结果
+        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
+        List<String> outputList = new ArrayList<>();
+        // 取用时最大值，便于判断是否超时
+        long maxTime = 0;
+        for (ExecuteMessage executeMessage : executeMessageList) {
+            String errorMessage = executeMessage.getErrorMessage();
+            if (StrUtil.isNotBlank(errorMessage)) {
+                executeCodeResponse.setMessage(errorMessage);
+                // 用户提交的代码执行中存在错误
+                executeCodeResponse.setStatus(3);
+                break;
+            }
+            outputList.add(executeMessage.getMessage());
+            Long time = executeMessage.getTime();
+            if (time != null) {
+                maxTime = Math.max(maxTime, time);
+            }
+        }
+        // 正常运行完成
+        if (outputList.size() == executeMessageList.size()) {
+            executeCodeResponse.setStatus(1);
+        }
+        executeCodeResponse.setOutputList(outputList);
+        JudgeInfo judgeInfo = new JudgeInfo();
+        judgeInfo.setTime(maxTime);
+        // 要借助第三方库来获取内存占用，非常麻烦，此处不做实现
+//        judgeInfo.setMemory();
+
+        executeCodeResponse.setJudgeInfo(judgeInfo);
+
+        // 5.代码文件清理，释放空间
+        if (userCodeFile.getParentFile() != null) {
+            boolean del = FileUtil.del(userCodeParentPath);
+            System.out.println("删除" + (del ? "成功" : "失败"));
+        }
+
+        // 6.错误处理，提高程序健壮性
+        return executeCodeResponse;
     }
+
+    /**
+     * 获取错误响应
+     *
+     * @param e
+     * @return
+     */
+    private ExecuteCodeResponse getErrorResponse(Throwable e) {
+        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
+        executeCodeResponse.setOutputList(new ArrayList<>());
+        executeCodeResponse.setMessage(e.getMessage());
+        // 表示代码沙箱错误
+        executeCodeResponse.setStatus(2);
+        executeCodeResponse.setJudgeInfo(new JudgeInfo());
+        return executeCodeResponse;
+    }
+
 }
